--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -21,6 +21,17 @@
             android:text="TicketID"
             android:textSize="20sp"
             android:textStyle="bold" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/black"
+            android:text="Title"
+            android:textSize="20sp"
+            />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
